# rust-mcp-server

./: .gitattributes  .gitignore  .linelint.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml  linelint.yml  tools.md
.github/: copilot-instructions.md
.github/agents/: rust-docs.agent.md
.github/workflows/: build-release-assets.yml  copilot-setup-steps.yml  docker.yml  docs-check.yml  release-plz.yml  rust.yml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: copilot-codding-agent.md  copilot-coding-agent.md  instructions.md
prompts/: add-tool.prompt.md  update-toolset.md
scripts/: generate-docs.ps1  generate-docs.py  generate-docs.sh  inspect.ps1  start-mcp-server.ps1  start-mcp-server.py  update-mcp.ps1  update-stable-tag.py
src/: command.rs  globals.rs  handler.rs  main.rs  meta.rs  prompts.rs  resources.rs  response.rs  result_ext.rs  rmcp_server.rs  serde_utils.rs  tool.rs  workspace.rs
src/tools/: cargo.rs  cargo_deny.rs  cargo_hack.rs  cargo_insta.rs  cargo_machete.rs  mod.rs  rustc.rs  rustup.rs  test.rs
src/tools/cargo/: add_remove.rs  build.rs  check.rs  clippy.rs  doc.rs  expand.rs  info.rs  metadata.rs  mod.rs  package.rs  search.rs  test.rs  tree.rs  update.rs  workspace_info.rs
src/tools/snapshots/: rust_mcp_server__tools__cargo_insta__tests__cargo_insta_update_snapshots_all_features_args.snap  rust_mcp_server__tools__cargo_insta__tests__cargo_insta_update_snapshots_all_features_args.snap.new  rust_mcp_server__tools__cargo_insta__tests__cargo_insta_update_snapshots_default_args.snap  rust_mcp_server__tools__cargo_insta__tests__cargo_insta_update_snapshots_default_args.snap.new  rust_mcp_server__tools__cargo_insta__tests__cargo_insta_update_snapshots_features_and_targets_args.snap  rust_mcp_server__tools__cargo_insta__tests__cargo_insta_update_snapshots_features_and_targets_args.snap.new  rust_mcp_server__tools__cargo_insta__tests__cargo_insta_update_snapshots_manifest_path_args.snap  rust_mcp_server__tools__cargo_insta__tests__cargo_insta_update_snapshots_manifest_workspace_root_args.snap  rust_mcp_server__tools__cargo_insta__tests__cargo_insta_update_snapshots_nextest_runner_args.snap
