[package]
name = "rust-mcp-server"
version = "0.2.0"
edition = "2024"
description = "An MCP server for Rust development"
authors = ["Vaiz"]
license = "Unlicense"
repository = "https://github.com/Vaiz/rust-mcp-server"
homepage = "https://github.com/Vaiz/rust-mcp-server"
readme = "README.md"
keywords = ["mcp", "cli"]
include = [
    "/src/**",
    "/docs/**", 
    "/prompts/**",
    "README.md",
    "build.rs",
    "!docker/**",
    "!*.png"
]

[dependencies]
async-trait = "0.1.88"
clap = { version = "4.5.40", default-features = false, features = ["std", "help", "error-context", "usage", "suggestions", "derive", "string"] }
phf = { version = "0.12.1", features = ["macros"] }
reqwest = { version = "0.12.21" }
rust-mcp-sdk = { version = "0.5.0", default-features = false, features = ["server", "2025_06_18", "macros"] }
schemars = "1.0.3"
serde = { version ="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", default-features = false, features = [] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[package.metadata.cargo-machete]
ignored = ["serde_json"]
