[package]
name = "rust-mcp-server"
version = "0.3.2"
edition = "2024"
rust-version = "1.90"
description = "An MCP server for Rust development"
authors = ["Vaiz"]
license = "Unlicense"
repository = "https://github.com/Vaiz/rust-mcp-server"
homepage = "https://github.com/Vaiz/rust-mcp-server"
readme = "README.md"
keywords = ["mcp", "cli"]
include = [
    "/src/**",
    "/docs/**", 
    "/prompts/**",
    "README.md",
    "build.rs",
    "!docker/**",
    "!*.png"
]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", default-features = false, features = ["std", "help", "error-context", "usage", "suggestions", "derive", "string"] }
rmcp = { version = "0.12.0", default-features = false, features = ["base64", "server", "macros", "transport-io"] }
schemars = "1.1.0"
serde = { version ="1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
